<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:background="@color/text_color_white"
              android:orientation="vertical"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginRight="@dimen/dimen38"
        android:layout_marginLeft="@dimen/dimen38"
        android:layout_marginTop="@dimen/dimen12"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/dimen13"
            android:textColor="@color/dark"
            android:text="请输入铁鞋信息"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_work_sn"
            android:layout_marginTop="@dimen/dimen5"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dimen14"
            android:text="@string/tv_device_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_work_bm"
            android:layout_marginTop="@dimen/dimen5"
            android:textSize="@dimen/dimen13"
            android:textColor="@color/color_black"
            android:text="@string/tv_device_bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_work_gdh"
            android:layout_marginTop="@dimen/dimen5"
            android:textSize="@dimen/dimen13"
            android:textColor="@color/color_black"
            android:text="@string/tv_device_gdh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_work_txwz"
            android:layout_marginTop="@dimen/dimen5"
            android:textSize="@dimen/dimen13"
            android:textColor="@color/color_black"
            android:text="@string/tv_device_txwz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_work_jcch"
            android:layout_marginTop="@dimen/dimen5"
            android:textSize="@dimen/dimen13"
            android:textColor="@color/color_black"
            android:text="@string/tv_device_jcch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12"
            android:text="撤防人"
            android:textColor="@color/dark"
            android:textSize="@dimen/dimen14"/>

        <TextView
            android:id="@+id/tv_current_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:text="撤防人"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dimen14"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginBottom="@dimen/dimen12"
            android:textSize="@dimen/dimen14"
            android:textColor="@color/red"
            android:text="请卸载铁鞋后点击【撤防】"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/color_d9d9d9"
        android:layout_height="@dimen/dimen1"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_cancel"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8"
            android:layout_width="0dp"
            android:text="取消"
            android:gravity="center_horizontal"
            android:textSize="@dimen/dimen16"
            android:textColor="@color/color_4aa6e9"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="@dimen/dimen1"
            android:background="@color/color_d9d9d9"
            android:layout_height="match_parent"></LinearLayout>

        <TextView
            android:id="@+id/text_view_dowork"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8"
            android:layout_width="0dp"
            android:text="撤防"
            android:gravity="center_horizontal"
            android:textSize="@dimen/dimen16"
            android:textColor="@color/color_4aa6e9"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>


